--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.2",
+    "vue-info-card": "^0.1.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.17"
   },
