--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.2",
     "vue-info-card": "^0.1.1",
+    "vue-instant-pdf-viewer": "^1.0.2",
+    "vue-pdf": "^3.3.1",
     "vue-router": "^3.0.1",
+    "vue-youtube-embed": "^2.1.3",
     "vuetify": "^1.0.17"
   },
   "devDependencies": {
